merge release crypto-primitives 1.4.4.0